--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <html>
     <head><title></title></head>
     <body>
-        
+        <table border="1">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+
     </body>
 </html>
