Creacion de encabezado

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <table border="1">
             <thead>
                 <tr>
-                    <th></th>
-                    <th></th>
+                    <th colspan="2">Curso de LPII</th>
+                    
                 </tr>
             </thead>
             <tbody>
