--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
+                    <td>Nombres</td>
                     <td></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Apellido</td>
                     <td></td>
                 </tr>
             </tbody>
